--- a/.gitignore
+++ b/.gitignore
@@ -9117,3 +9117,29 @@ Projects/ImageS/js/marvinj-1.0.js
 Projects/ThreeJS/app.js
 Projects/ThreeJS/index.html
 typings.json
+Projects/FotoPrint/js/DrawingObjects.js
+Projects/FotoPrint/js/FotoPrint.js
+Projects/FotoPrintASDASD/.DS_Store
+Projects/FotoPrintASDASD/.idea/encodings.xml
+Projects/FotoPrintASDASD/.idea/misc.xml
+Projects/FotoPrintASDASD/.idea/modules.xml
+Projects/FotoPrintASDASD/.idea/vcs.xml
+Projects/FotoPrintASDASD/.idea/workspace.xml
+Projects/FotoPrintASDASD/css/styling.css
+Projects/FotoPrintASDASD/css/styling1.css
+Projects/FotoPrintASDASD/FotoPrint 1617.iml
+Projects/FotoPrintASDASD/FotoPrint 1718mouse.iml
+Projects/FotoPrintASDASD/FotoPrint.html
+Projects/FotoPrintASDASD/imgs/allison1.jpg
+Projects/FotoPrintASDASD/imgs/annika.jpg
+Projects/FotoPrintASDASD/imgs/daniel1.jpg
+Projects/FotoPrintASDASD/imgs/grant1.jpg
+Projects/FotoPrintASDASD/imgs/liam2.jpg
+Projects/FotoPrintASDASD/imgs/logo.jpg
+Projects/FotoPrintASDASD/imgs/Thumbs.db
+Projects/FotoPrintASDASD/js/.DS_Store
+Projects/FotoPrintASDASD/js/DrawingObjects.js
+Projects/FotoPrintASDASD/js/FotoPrint.js
+Projects/FotoPrintASDASD/js/FotoPrint_manager.js
+Projects/FotoPrintASDASD/js/myScript.js
+Projects/FotoPrintASDASD/Projecto 4 - FotoPrint.iml
